syntax = "proto3";
package mathing;

message UserRow {
  string uuid = 1;
  string created_at = 2;
  string updated_at = 3;
  string name = 4;
}
